Agregando Index css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <title>Dota 2 Wiki</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./index - css.css">
     </head>
     <body>
-        <h2>Probando Pagina de mrd</h2>
-        <
+        <div>
+
+        </div>
     </body>
 </html>
